--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "lambda-cog-tiles",
+  "name": "higuruma",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "build": "esbuild --bundle --outfile=./dist/index.js --platform=node --target=node20 ./src/index.ts",
+    "build": "tsx build.ts",
+    "build:types": "tsc --declaration --emitDeclarationOnly --declarationDir './dist'",
     "zip": "zip -j lambda.zip dist/*",
     "update": "aws lambda update-function-code --zip-file fileb://lambda.zip --function-name lambda-cog-tiles",
     "deploy": "run-s build zip update",
-    "dev": "MODE=nodejs tsx --watch src/index.ts"
+    "dev": "MODE=nodejs tsx --watch src/index.ts",
+    "prepare": "run-s build build:types"
   },
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@hono/node-server": "^1.12.2",
     "@mapbox/sphericalmercator": "^1.2.0",
@@ -22,6 +31,7 @@
     "npm-run-all2": "^6.2.0",
     "tslib": "^2.7.0",
     "tsx": "^4.19.1",
+    "typescript": "^5.6.2",
     "upng-js": "^2.1.0",
     "web-worker": "^1.3.0"
   },
