--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "higuruma",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "build": "tsx build.ts",
@@ -8,8 +8,11 @@
     "zip": "zip -j lambda.zip dist/*",
     "update": "aws lambda update-function-code --zip-file fileb://lambda.zip --function-name lambda-cog-tiles",
     "deploy": "run-s build zip update",
-    "dev": "MODE=nodejs tsx --watch src/main.ts",
+    "dev": "tsx --watch src/main.ts",
     "prepare": "run-s build build:types"
+  },
+  "bin": {
+    "higuruma": "./dist/main.cjs"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
@@ -27,6 +30,7 @@
     "d3-scale": "^4.0.2",
     "esbuild": "^0.21.4",
     "geotiff": "^2.1.3",
+    "hono": "^4.6.1",
     "maplibre-gl": "^4.7.0",
     "npm-run-all2": "^6.2.0",
     "tslib": "^2.7.0",
@@ -35,7 +39,5 @@
     "upng-js": "^2.1.0",
     "web-worker": "^1.3.0"
   },
-  "dependencies": {
-    "hono": "^4.6.1"
-  }
+  "dependencies": {}
 }
