--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
         "skipLibCheck": true,
         "types": ["node"],
         "jsx": "react-jsx",
-        "jsxImportSource": "hono/jsx"
+        "jsxImportSource": "hono/jsx",
+        "outDir": "dist",
+        "declaration": true
     },
     "include": ["src/index.ts"]
 }
